# AIFlow-Platform

./: .gitignore  README.en.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/: ip2region_hash.txt
.github/workflows/: release-frontend.yml  release-server.yml
docker/: Dockerfile.backend
docker/redis/data/: dump.rdb
docs/.vitepress/: config.ts
docs/guide/: backend.md  database-migration.md  deploy.md  getting-started.md  redis.md
server/: config.yaml  main.py
server/ai/: __init__.py  auth.py  router.py
server/annotation/: auth.py  log.py
server/apis/: __init__.py  auth.py  cache.py  casbin.py  config.py  dashboard.py  department.py  dictionary.py  doc.py  file.py  log.py  notification.py  permission.py  role.py  server.py  user.py
server/exceptions/: exception.py  handle.py
server/fva_mcp/: server.py
server/fva_mcp/tools/: api_tools.py  db_tools.py  model_tools.py  redis_tools.py  schema_tools.py
server/middlewares/: casbin.py  cors.py  gzip.py  handle.py
server/models/: __init__.py  casbin.py  common.py  config.py  department.py  dictionary.py  dictionary_item.py  file.py  log.py  notification.py  permission.py  role.py  sa_orm.py  user.py
server/schemas/: __init__.py  auth.py  cache.py  common.py  config.py  department.py  dictionary.py  file.py  log.py  notification.py  permission.py  role.py  server.py  user.py
server/setup/: setup_app.py
server/utils/: captcha.py  casbin.py  common.py  config.py  cron.py  database.py  dynamic_config.py  get_redis.py  ip2region_util.py  log.py  mail.py  memory_redis.py  notification.py  password.py  response.py  storage.py
web/: .env  .env.development  index.html  package.json  vite.config.ts
web/src/api/: auth.ts  rag.ts
(+25 files in other folders)
