[project]
name = "fastapi-vue-admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiomysql==0.2.0",
    "aioredis==2.0.1",
    "aiosmtplib==4.0.1",
    "aiosqlite==0.21.0",
    "asyncpg==0.31.0",
    "casbin==1.36.3",
    "cryptography==45.0.5",
    "docx2txt>=0.0.0",
    "fastapi==0.116.1",
    "fastmcp==2.5.2",
    "httpx==0.28.1",
    "jieba>=0.0.0",
    "jinja2==3.1.6",
    "langchain>=0.2.14",
    "langchain-community>=0.2.14",
    "langchain-core>=0.2.14",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "langgraph>=0.2.31",
    "langsmith>=0.0.0",
    "loguru==0.7.3",
    "mcp>=1.20.0",
    "openpyxl>=0.0.0",
    "passlib[bcrypt]==1.7.4",
    "pillow==11.3.0",
    "psutil==7.1.3",
    "py-ip2region==3.0.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydantic-settings==2.10.1",
    "pydantic-validation-decorator==0.1.5",
    "pymilvus>=2.4.0",
    "pymysql==1.1.1",
    "pypdf>=0.0.0",
    "python-dateutil==2.9.0",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "pywin32==310 ; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "redis==6.2.0",
    "requests>=0.0.0",
    "rich>=0.0.0",
    "rsa==4.9.1",
    "sqlalchemy==2.0.43",
    "starlette==0.47.2",
    "tabulate>=0.0.0",
    "unstructured>=0.0.0",
    "user-agents==2.2.0",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
    "wmi==1.5.1 ; sys_platform == 'win32'",
]
